--- a/ShelterEvidency/Views/CostsView.xaml
+++ b/ShelterEvidency/Views/CostsView.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DataGrid Grid.Column="1" Margin="5" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" SelectedValuePath="Id" ItemsSource="{Binding Path=AnimalCosts, Mode=OneWay}" SelectedValue="{Binding Path=SelectedCost, Mode=OneWayToSource}" />
+        <DataGrid Grid.Column="1" Margin="5" ColumnWidth="*" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" SelectedValuePath="Id" ItemsSource="{Binding Path=AnimalCosts, Mode=OneWay}" SelectedValue="{Binding Path=SelectedCost, Mode=OneWayToSource}" />
         <StackPanel Margin="5">
             <GroupBox Header="Upravit vybraný náklad:">
                 <StackPanel>
