--- a/ShelterEvidency/Views/HomeView.xaml
+++ b/ShelterEvidency/Views/HomeView.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="HomeView" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+        Title="HomeView" Height="607.209" Width="1028.809" WindowStartupLocation="CenterScreen" WindowState="Maximized">
 
     <Grid Margin="5">
 
@@ -41,22 +41,26 @@
             <Button x:Name="LoadAddPersonPage" Content="Přidat osobu" />
             <Button x:Name="LoadSearchPersonPage" Content="Vyhledat osobu" />
             <Button x:Name="LoadAdoptionsPage" Content="Adopce" />
-            <Button x:Name="LoadDonationsPage" Content="Finance/Dary" />
+            <Button x:Name="LoadDonationsPage" Content="Finance" />
             <Button Content="Statistiky" />
             <Button x:Name="LoadSettingsPage" Content="Nastavení" />
         </StackPanel>
         <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="1" Grid.Column="1">
             <Grid   Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
 
-                <Grid>
+                <Grid Grid.ColumnSpan="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="3*"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
 
-                    <StackPanel Grid.Column="1">
+                    <StackPanel Grid.Column="1" Margin="10,0,0,0">
                         <Viewbox>
-                            <Calendar Margin="10" SelectedDate="{Binding SelectedDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            <Calendar Margin="15" SelectedDate="{Binding SelectedDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                         </Viewbox>
                         <GroupBox Header="Přidat poznámku na vybraný den:">
                             <Grid>
@@ -68,12 +72,12 @@
                                 <Button x:Name="CreateDiaryRecord" Content="OK" Grid.Column="1"/>
                             </Grid>
                         </GroupBox>
-                        <DataGrid ItemsSource="{Binding Path=RecordList, Mode=OneWay}" Margin="0,10,0,0"/>
+                        <DataGrid ItemsSource="{Binding Path=RecordList, Mode=OneWay}" Margin="0,10,0,0" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False"/>
                     </StackPanel>
 
                 </Grid>
 
-                <ContentControl x:Name="ActiveItem" Grid.Column="1" Grid.Row="1"/>
+                <ContentControl x:Name="ActiveItem" Margin="0,0,10,0"/>
             </Grid>
         </ScrollViewer>
     </Grid>
