--- a/ShelterEvidency/Views/IncidentsView.xaml
+++ b/ShelterEvidency/Views/IncidentsView.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DataGrid Grid.Column="1" Margin="5" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" SelectedValuePath="ID" ItemsSource="{Binding Path=AnimalIncidents, Mode=OneWay}" SelectedValue="{Binding Path=SelectedIncident, Mode=OneWayToSource}" />
+        <DataGrid Grid.Column="1" Margin="5" SelectionMode="Single" SelectionUnit="FullRow" ColumnWidth="*" CanUserAddRows="False" SelectedValuePath="ID" ItemsSource="{Binding Path=AnimalIncidents, Mode=OneWay}" SelectedValue="{Binding Path=SelectedIncident, Mode=OneWayToSource}" />
         <StackPanel Margin="5">
             <GroupBox Header="Upravit vybraný incident:">
                 <StackPanel>
