--- a/ShelterEvidency/Views/WalksView.xaml
+++ b/ShelterEvidency/Views/WalksView.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DataGrid Grid.Column="1" Margin="5" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" SelectedValuePath="ID" ItemsSource="{Binding Path=AnimalWalks, Mode=OneWay}" SelectedValue="{Binding Path=SelectedWalk, Mode=OneWayToSource}"/>
+        <DataGrid Grid.Column="1" Margin="5" ColumnWidth="*" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" SelectedValuePath="ID" ItemsSource="{Binding Path=AnimalWalks, Mode=OneWay}" SelectedValue="{Binding Path=SelectedWalk, Mode=OneWayToSource}"/>
         <StackPanel Margin="5">
             <GroupBox Header="Upravit vybranou procházku:">
                 <StackPanel>
