--- a/ShelterEvidency/Views/EconomyView.xaml
+++ b/ShelterEvidency/Views/EconomyView.xaml
@@ -6,7 +6,18 @@
              xmlns:local="clr-namespace:ShelterEvidency.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Red">
-            
+    <Grid Background="White">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="25*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
+            <Button x:Name="Costs" Content="Náklady" Margin="2,0,0,0" Padding="2,0"/>
+            <Button x:Name="Donations"  Content="Sponzorství" Margin="2,0,0,0" Padding="2,0"/>
+        </StackPanel>
+
+        <ContentControl x:Name="ActiveItem" Grid.Row="1"/>
+
+
     </Grid>
 </UserControl>
