--- a/ShelterEvidency/Views/GeneralCostsView.xaml
+++ b/ShelterEvidency/Views/GeneralCostsView.xaml
@@ -11,7 +11,18 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DataGrid Grid.Column="1" Margin="5" ColumnWidth="*" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" SelectedValuePath="Id" ItemsSource="{Binding Path=AnimalCosts, Mode=OneWay}" SelectedValue="{Binding Path=SelectedCost, Mode=OneWayToSource}" />
+        
+        <StackPanel Grid.Column="1">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock TextWrapping="Wrap" Text="Od:" Margin="5"/>
+                <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=Since, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock TextWrapping="Wrap" Text="Do:" Margin="5"/>
+                <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=To, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}"/>
+                <Button x:Name="Filter" Content="Filtrovat"/>
+            </StackPanel>
+            <DataGrid Grid.Column="1" Margin="5" ColumnWidth="*" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" SelectedValuePath="Id" ItemsSource="{Binding Path=AnimalCosts, Mode=OneWay}" SelectedValue="{Binding Path=SelectedCost, Mode=OneWayToSource}" />
+        </StackPanel>
+        
         <StackPanel Margin="5">
             <GroupBox Header="Upravit vybraný náklad:">
                 <StackPanel>
