--- a/ShelterEvidency/Views/AddAnimalView.xaml
+++ b/ShelterEvidency/Views/AddAnimalView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
+             Background="{DynamicResource MaterialDesignPaper}"
+                TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+                FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -26,7 +29,7 @@
             <TextBlock TextWrapping="Wrap" Text="Datum příjmu:" Margin="5"/>
             <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=StayStartDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
 
-            <TextBlock TextWrapping="Wrap" Text="Datum narození (odhad):" Margin="5"/>
+            <TextBlock TextWrapping="Wrap" Text="Datum narození:" Margin="5"/>
             <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=BirthDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
 
             <TextBlock TextWrapping="Wrap" Text="Váha (kg):" Margin="5"/>
