--- a/ShelterEvidency/Views/BasicInfoView.xaml
+++ b/ShelterEvidency/Views/BasicInfoView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
+             Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -81,15 +84,6 @@
         </StackPanel>
         <Button x:Name="LoadImage" Grid.Row="1" Content="Image" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,0,10,10"/>
         <Image Margin="10" Source="{Binding Path=AnimalImage}"/>
-        
-        <StackPanel Grid.Column="1" Grid.Row="1">
-            <TextBlock  HorizontalAlignment="Center"  Text="{Binding Path=Name, Mode=TwoWay}" VerticalAlignment="Center"/>
-            <TextBlock  HorizontalAlignment="Center"  Text="{Binding Path=ChipNumber, Mode=TwoWay}" VerticalAlignment="Center"/>
-            <TextBlock  HorizontalAlignment="Center"  Text="{Binding Path=Sex, Mode=TwoWay}" VerticalAlignment="Center"/>
-            <TextBlock  HorizontalAlignment="Center"  Text="{Binding Path=Species, Mode=TwoWay}" VerticalAlignment="Center"/>
-            <TextBlock  HorizontalAlignment="Center"  Text="{Binding Path=Breed, Mode=TwoWay}" VerticalAlignment="Center"/>
-            <TextBlock  HorizontalAlignment="Center"  Text="{Binding Path=CoatType, Mode=TwoWay}" VerticalAlignment="Center"/>
-            <TextBlock  HorizontalAlignment="Center"  Text="{Binding Path=FurColor, Mode=TwoWay}" VerticalAlignment="Center"/>
-        </StackPanel>
+
     </Grid>
 </UserControl>
