--- a/ShelterEvidency/Views/EvidencyCardView.xaml
+++ b/ShelterEvidency/Views/EvidencyCardView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
+             Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="25*"/>
@@ -21,7 +24,6 @@
             <Button x:Name="People" Content="Navázané osoby" Margin="2,0,0,0" Padding="2,0"/>
             <Button x:Name="Documents" Content="Dokumenty" Margin="2,0,0,0" Padding="2,0"/>
 
-            <TextBlock TextWrapping="Wrap" Text="{Binding Path=AnimalID}"/>
         </StackPanel>
 
         <ContentControl x:Name="ActiveItem" Grid.Row="1"/>
