--- a/ShelterEvidency/Views/HomeView.xaml
+++ b/ShelterEvidency/Views/HomeView.xaml
@@ -3,9 +3,212 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
+        Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
         Title="HomeView" Height="607.209" Width="1028.809" WindowStartupLocation="CenterScreen" WindowState="Maximized">
 
+    <Window.Resources>
+        <Storyboard x:Key="OpenMenu">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Width)" Storyboard.TargetName="GridMenu">
+                <EasingDoubleKeyFrame KeyTime="0" Value="70"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="250"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+        <Storyboard x:Key="CloseMenu">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Width)" Storyboard.TargetName="GridMenu">
+                <EasingDoubleKeyFrame KeyTime="0" Value="250"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="70"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+    </Window.Resources>
+
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonOpenMenu">
+            <BeginStoryboard Storyboard="{StaticResource OpenMenu}"/>
+        </EventTrigger>
+        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonCloseMenu">
+            <BeginStoryboard Storyboard="{StaticResource CloseMenu}"/>
+        </EventTrigger>
+    </Window.Triggers>
+    <Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3.5*"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="1" x:Name="GridMain" Margin="100,5,20,5">
+                <ContentControl x:Name="ActiveItem" Grid.RowSpan="2"/>
+            </Grid>
+
+            <DockPanel Grid.Column="1" Grid.Row="1" LastChildFill="True" >
+                <Viewbox DockPanel.Dock="Top" Margin="10" MaxHeight="400">
+                    <Calendar SelectedDate="{Binding SelectedDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                </Viewbox>
+                <GroupBox Margin="10" DockPanel.Dock="Top" Header="Přidat poznámku na vybraný den:">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="5*"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="DiaryRecord" Text="{Binding Path=DiaryRecord, Mode=TwoWay}" Margin="0,0,10,0"/>
+                        <Button x:Name="CreateDiaryRecord" Width="25" Height="25" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" Grid.Column="1">
+                            <materialDesign:PackIcon
+                                Kind="Plus"
+                                Height="20"
+                                Width="20" />
+                        </Button>
+                    </Grid>
+                </GroupBox>
+                <TextBlock Margin="15" DockPanel.Dock="Top" Style="{StaticResource MaterialDesignHeadline6TextBlock}">Dnešní poznámky:</TextBlock>
+                <DataGrid ItemsSource="{Binding Path=RecordList, Mode=OneWay}" Margin="0,10,0,0" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False"/>
+            </DockPanel>
+
+            <Grid Grid.ColumnSpan="2" VerticalAlignment="Center">
+                <Grid.Effect>
+                    <DropShadowEffect BlurRadius="1" ShadowDepth="1" Color="#FFACACAC"/>
+                </Grid.Effect>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Margin="10">
+                        <StackPanel Width="150">
+                            <Button x:Name="LoadSettingsPage" Content="Nastavení"/>
+                            <Button Content="Nic"/>
+                            <Separator/>
+                            <Button x:Name="Exit"  Content="Logout"/>
+                        </StackPanel>
+                    </materialDesign:PopupBox>
+                </StackPanel>
+            </Grid>
+
+
+        </Grid>
+
+        <Grid x:Name="GridMenu" Width="70" HorizontalAlignment="Left">
+            <Grid.Effect>
+                <DropShadowEffect BlurRadius="2" ShadowDepth="1" Color="#FFAEAEAE"/>
+            </Grid.Effect>
+            <StackPanel>
+                <Grid Height="150" Background="White" RenderTransformOrigin="0.5,0.5">
+                    <Grid.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Grid.RenderTransform>
+                    <Button x:Name="ButtonOpenMenu" Height="60" Width="60" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonOpenMenu_Click">
+                        <materialDesign:PackIcon Kind="Menu" Width="25" Height="25"/>
+                    </Button>
+                    <Button x:Name="ButtonCloseMenu" Visibility="Collapsed" Height="60" Width="60" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF31577E" Click="ButtonCloseMenu_Click">
+                        <materialDesign:PackIcon Kind="ArrowLeft" Width="25" Height="25"/>
+                    </Button>
+
+                    <Image Height="80" VerticalAlignment="Bottom"/>
+                </Grid>
+
+
+                <Grid Background="White" RenderTransformOrigin="0.5,0.5">
+                    <Grid.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Grid.RenderTransform>
+
+                    <ListView x:Name="ListViewMenu" Foreground="White" Background="White" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+
+                        <Button x:Name="Home" Height="60"  Padding="14,4,16,4">
+                            <Grid Width="225">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <materialDesign:PackIcon Kind="Home" Height="25" Width="25" Margin="0,10,10,10"/>
+                                <TextBlock Grid.Column="1" Text="Úvodní obrazovka" VerticalAlignment="Center" Margin="20 10"/>
+                            </Grid>
+                        </Button>
+                        <Button x:Name="LoadAddAnimalPage" Height="60"  Padding="14,4,16,4">
+                            <Grid Width="225">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <materialDesign:PackIcon Kind="Dog" Height="25" Width="25" Margin="0,10,10,10"/>
+                                <TextBlock Text="Přidat zvíře" Grid.Column="1" VerticalAlignment="Center" Margin="20 10"/>
+                            </Grid>
+                        </Button>
+                        <Button x:Name="LoadSearchAnimalPage" Height="60"  Padding="14,4,16,4">
+                            <Grid Width="225">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <materialDesign:PackIcon Kind="Magnify" Height="25" Width="25" Margin="0,10,10,10"/>
+                                <TextBlock Text="Vyhledat zvíře" Grid.Column="1" VerticalAlignment="Center"  Margin="20 10"/>
+                            </Grid>
+                        </Button>
+                        <Button Height="60" x:Name="LoadPersonPage"  Padding="14,4,16,4">
+                            <Grid Width="225">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <materialDesign:PackIcon Kind="PersonAdd" Height="25" Width="25" Margin="0,10,10,10"/>
+                                <TextBlock Text="Správa osob" Grid.Column="1" VerticalAlignment="Center"  Margin="20 10"/>
+                            </Grid>
+                        </Button>
+                        <Button Height="60" x:Name="LoadAdoptionsPage" Padding="14,4,16,4">
+                            <Grid Width="225">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <materialDesign:PackIcon Kind="HomeAdd" Height="25" Width="25" Margin="0,10,10,10"/>
+                                <TextBlock Text="Adopce" Grid.Column="1" VerticalAlignment="Center"  Margin="20 10"/>
+                            </Grid>
+                        </Button>
+                        <Button Height="60" x:Name="LoadEconomyPage"  Padding="14,4,16,4">
+                            <Grid Width="225">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <materialDesign:PackIcon Kind="Finance" Height="25" Width="25" Margin="0,10,10,10"/>
+                                <TextBlock Text="Finance a příspěvky" Grid.Column="1" VerticalAlignment="Center"  Margin="20 10"/>
+                            </Grid>
+                        </Button>
+
+                        <Button Height="60" x:Name="LoadStatisticsPage"  Padding="14,4,16,4">
+                            <Grid Width="225">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <materialDesign:PackIcon Kind="InfoCircle" Height="25" Width="25" Margin="0,10,10,10"/>
+                                <TextBlock Grid.Column="1" Text="Statistiky" VerticalAlignment="Center"  Margin="20 10"/>
+                            </Grid>
+                        </Button>
+                    </ListView>
+
+                </Grid>
+
+
+
+
+            </StackPanel>
+        </Grid>
+    </Grid>
+
+    <!--
     <Grid Margin="5">
 
         <Grid.RowDefinitions>
@@ -29,12 +232,6 @@
         </StackPanel>
 
         <StackPanel Grid.Row="1" >
-            <StackPanel.Resources>
-                <Style TargetType="{x:Type Button}">
-                    <Setter Property="Margin" Value="0,10,0,0"/>
-                    <Setter Property="Height" Value="35"/>
-                </Style>
-            </StackPanel.Resources>
             <Button x:Name="Home" Content="Úvod"/>
             <Button x:Name="LoadAddAnimalPage" Content="Přidat zvíře" />
             <Button x:Name="LoadSearchAnimalPage" Content="Vyhledat zvíře" />
@@ -80,4 +277,6 @@
             </Grid>
         </ScrollViewer>
     </Grid>
+    
+    -->
 </Window>
