--- a/ShelterEvidency/Views/SearchPersonView.xaml
+++ b/ShelterEvidency/Views/SearchPersonView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
+             Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
@@ -15,8 +18,6 @@
         <StackPanel Orientation="Horizontal">
             <TextBlock TextWrapping="Wrap" Text="Vyhledávání:" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <TextBox x:Name="SearchValue" TextWrapping="Wrap" Margin="5,5,5,5" Width="400" VerticalContentAlignment="Center"/>
-            <TextBlock TextWrapping="Wrap" Text="{Binding Path=SearchValue}"/>
-            <TextBlock TextWrapping="Wrap" Text="{Binding Path=SelectedPerson}"/>
             <Button x:Name="OpenPersonInfo" Content="Detail" Margin="5"/>
             <Button x:Name="UpdatePeople" Content="Aktualizovat" Margin="5"/>
         </StackPanel>
