--- a/ShelterEvidency/Views/SearchAnimalView.xaml
+++ b/ShelterEvidency/Views/SearchAnimalView.xaml
@@ -4,12 +4,21 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
+             xmlns:helpers="clr-namespace:ShelterEvidency.Helpers"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              Background="{DynamicResource MaterialDesignPaper}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <UserControl.Resources>
+        <helpers:InvertBooleanConverter  x:Key="boolConvert"/>
+        <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
+    </UserControl.Resources>
+
+
+
+    <Grid IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
@@ -22,6 +31,14 @@
             <Button x:Name="UpdateAnimals" Content="Aktualizovat" Margin="5"/>
         </StackPanel>
         <DataGrid Grid.Row="1" Margin="5" ColumnWidth="*" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" ItemsSource="{Binding Path=Animals, Mode=OneWay}" SelectedItem="{Binding Path=SelectedAnimal, Mode=OneWayToSource}"/>
+        <ProgressBar  
+              Visibility="{Binding IsWorking, Converter={StaticResource VisibleIfTrueConverter}}"
+              Grid.RowSpan="2"
+              Style="{StaticResource MaterialDesignCircularProgressBar}"
+              Value="0"
+              Height="50"
+              Width="50"
+              IsIndeterminate="True" />
         <ContentControl x:Name="ActiveItem" Grid.RowSpan="2"/>
 
     </Grid>
