--- a/ShelterEvidency/Views/AddAnimalView.xaml
+++ b/ShelterEvidency/Views/AddAnimalView.xaml
@@ -4,76 +4,169 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:helpers="clr-namespace:ShelterEvidency.Helpers"
              Background="{DynamicResource MaterialDesignPaper}"
-                TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-                FontFamily="{DynamicResource MaterialDesignFont}"
+             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+             FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+             d:DesignHeight="1000" d:DesignWidth="1200">
+
+    <UserControl.Resources>
+
+        <helpers:InvertBooleanConverter  x:Key="boolConvert"/>
+        <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
+
+
+    </UserControl.Resources>
+    
+    <Grid IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="30"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="1" Grid.RowSpan="2">
-            <TextBlock TextWrapping="Wrap" Text="Jméno:" Margin="5"/>
-            <TextBox x:Name="AnimalName" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
 
-            <TextBlock TextWrapping="Wrap" Text="Číslo čipu/tetování:" Margin="5"/>
-            <TextBox x:Name="ChipNumber"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+        <materialDesign:Card Grid.Column="1" Grid.ColumnSpan="2" Grid.RowSpan="2" Padding="20" UniformCornerRadius="5" >
+            <Grid Margin="30,0,0,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
 
-            <TextBlock TextWrapping="Wrap" Text="Datum příjmu:" Margin="5"/>
-            <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=StayStartDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
+                <StackPanel Grid.ColumnSpan="2" Grid.RowSpan="2">
+                    <GroupBox Header="Základní údaje" Padding="50,20,50,9"  Style="{DynamicResource MaterialDesignGroupBox}"
+                          materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                          BorderThickness="0" FontSize="14">
+                        <StackPanel>
+                            <TextBox x:Name="AnimalName" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:TextFieldAssist.HasClearButton="True" materialDesign:HintAssist.Hint="Jméno" TextWrapping="Wrap" Margin="5" Padding="2"/>
 
-            <TextBlock TextWrapping="Wrap" Text="Datum narození:" Margin="5"/>
-            <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=BirthDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
+                            <TextBox x:Name="ChipNumber" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Číslo čipu/tetování:" TextWrapping="Wrap" Margin="5" Padding="2"/>
 
-            <TextBlock TextWrapping="Wrap" Text="Váha (kg):" Margin="5"/>
-            <TextBox x:Name="Weight"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+                            <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" materialDesign:HintAssist.Hint="Pohlaví" ItemsSource="{Binding Path=SexList, Mode=OneWay}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=OneWayToSource}"/>
 
-            <CheckBox Content="kastrát" IsChecked="{Binding Path = Castration, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
+                            <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Druh" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=OneWayToSource}"/>
 
-        </StackPanel>
-        <StackPanel Grid.Column="2" Grid.RowSpan="2">
+                            <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Plemeno" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=OneWayToSource}"/>
 
-            <TextBlock TextWrapping="Wrap" Text="Pohlaví:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SexList, Mode=OneWay}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=OneWayToSource}"/>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <ToggleButton VerticalAlignment="Center"
+                                  Style="{StaticResource MaterialDesignSwitchAccentToggleButton}"
+                                  ToolTip="MaterialDesignSwitchAccentToggleButton" IsChecked="{Binding Path = Castration, Mode = TwoWay}" Margin="5" IsThreeState="False"/>
+                                    <TextBlock VerticalAlignment="Center" Text="kastrát" Margin="10,0,0,0"></TextBlock>
+                                </StackPanel>
+                                
+                                <DatePicker Grid.Column="1" Margin="30,5,5,5" materialDesign:HintAssist.Hint="Datum příjmu" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=StayStartDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
+                            </Grid>
 
-            <TextBlock TextWrapping="Wrap" Text="Druh:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=OneWayToSource}"/>
-
-            <TextBlock TextWrapping="Wrap" Text="Plemeno:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=OneWayToSource}"/>
-
-            <TextBlock TextWrapping="Wrap" Text="Kžíženec:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=CrossBreed, Mode=OneWayToSource}"/>
 
 
-            <TextBlock TextWrapping="Wrap" Text="Barva srsti:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=OneWayToSource}"/>
 
-            <TextBlock TextWrapping="Wrap" Text="Typ srsti:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=OneWayToSource}"/>
+                        </StackPanel>
+                    </GroupBox>
 
-            <TextBlock TextWrapping="Wrap" Text="Krmná dávka (g):" Margin="5"/>
-            <TextBox x:Name="FeedRation"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+                    <GroupBox Header="Další údaje" Margin="0,50,0,0" Padding="50,9"  Style="{DynamicResource MaterialDesignGroupBox}"
+                          materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                          BorderThickness="0" Grid.IsSharedSizeScope="True" FontSize="13" >
+                            <StackPanel>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBox x:Name="Weight" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Váha (kg)"  TextWrapping="Wrap" Margin="5" Padding="2"/>
+                                <TextBox x:Name="FeedRation" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Krmná dávka (g)" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                            </Grid>
 
-            <TextBlock TextWrapping="Wrap" Text="Poznámka:" Margin="5"/>
-            <TextBox  x:Name="Note" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
 
-        </StackPanel>
 
-        <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5" Orientation="Horizontal">
-            <Button x:Name="Cancel" Content="Zrušit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
-            <Button x:Name="SaveToDatabase" Content="Uložit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
-        </StackPanel>
-        <Button x:Name="LoadImage" Content="Nahrát obrázek" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,10"/>
-        <Image Margin="10" Source="{Binding Path=AnimalImage}"/>
+                                <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True"  materialDesign:HintAssist.Hint="Barva srsti" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=OneWayToSource}"/>
 
+                                <ComboBox Margin="5" Grid.Column="1" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Typ srsti" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=OneWayToSource}"/>
+
+                            </Grid>
+
+                            <ComboBox Margin="5" Style="{StaticResource MaterialDesignFloatingHintComboBox}" IsEditable="True" materialDesign:HintAssist.Hint="Kžíženec" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=CrossBreed, Mode=OneWayToSource}"/>
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <DatePicker Margin="5"  materialDesign:HintAssist.Hint="Datum narození" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=BirthDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
+                            </Grid>
+
+
+                            <TextBox Style="{StaticResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Poznámka"  x:Name="Note" TextWrapping="Wrap" Margin="5" Padding="2" Height="100"/>
+
+                        </StackPanel>
+                    </GroupBox>
+
+                </StackPanel>
+
+               
+                
+             
+
+               
+       
+
+                <StackPanel Grid.Column="2" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
+                    <Button Style="{StaticResource MaterialDesignFlatAccentButton}" x:Name="Cancel" Content="Zrušit" Width="75" Margin="5,0,5,5"/>
+                    <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" x:Name="SaveToDatabase" Content="Uložit" Width="75" Margin="5,0,5,5"/>
+                </StackPanel>
+            </Grid>
+
+            
+        </materialDesign:Card>
+
+        
+
+        <Grid Grid.RowSpan="2" Grid.ColumnSpan="2" VerticalAlignment="Center" Height="{Binding ActualWidth, RelativeSource={RelativeSource Self}}">
+            <materialDesign:Card UniformCornerRadius="120">
+            <Grid>
+                <materialDesign:PackIcon Kind="ImageOutline" VerticalAlignment="Center" HorizontalAlignment="Center" Width="100" Height="100" Opacity="0.08" />
+                <Image Source="{Binding Path=AnimalImage}" Stretch="UniformToFill" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </Grid>
+        </materialDesign:Card>
+
+            <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}" 
+                x:Name="LoadImage" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,2,2" >
+            <materialDesign:PackIcon
+                Kind="Plus"
+                Height="30"
+                Width="30" />
+        </Button>
+        </Grid>
+
+        <ProgressBar  
+              Visibility="{Binding IsWorking, Converter={StaticResource VisibleIfTrueConverter}, Mode=OneWay}"
+              Grid.RowSpan="2" Grid.ColumnSpan="3"
+              Style="{StaticResource MaterialDesignCircularProgressBar}"
+              Value="0"
+              Height="50"
+              Width="50"
+              IsIndeterminate="True" />
     </Grid>
+    
 </UserControl>
     
