--- a/ShelterEvidency/Views/SearchAnimalView.xaml
+++ b/ShelterEvidency/Views/SearchAnimalView.xaml
@@ -6,31 +6,114 @@
              xmlns:local="clr-namespace:ShelterEvidency.Views"
              xmlns:helpers="clr-namespace:ShelterEvidency.Helpers"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              Background="{DynamicResource MaterialDesignPaper}"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        FontFamily="{DynamicResource MaterialDesignFont}"
+            TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+            FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
+             d:DesignHeight="800" d:DesignWidth="1000">
+    <UserControl.Resources> 
         <helpers:InvertBooleanConverter  x:Key="boolConvert"/>
         <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
+        
+        <Style x:Key="CellCentering" TargetType="{x:Type DataGridCell}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type DataGridCell}">
+                        <Grid Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Left" Margin="15,0,0,0" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </UserControl.Resources>
 
 
 
     <Grid IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
             <RowDefinition/>
+            <RowDefinition Height="5.5*" />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <TextBlock TextWrapping="Wrap" Text="Vyhledávání:" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <TextBox x:Name="SearchValue" TextWrapping="Wrap" Margin="5,5,5,5" Width="400" VerticalContentAlignment="Center"/>
-            <Button x:Name="AddAnimal" Content="Přidat" Margin="5" Width="75"/>
-            <Button x:Name="OpenEvidencyCard" Content="Evidenční karta" Margin="5"/>
-            <Button x:Name="UpdateAnimals" Content="Aktualizovat" Margin="5"/>
-        </StackPanel>
-        <DataGrid Grid.Row="1" Margin="5" ColumnWidth="*" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" ItemsSource="{Binding Path=Animals, Mode=OneWay}" SelectedItem="{Binding Path=SelectedAnimal, Mode=OneWayToSource}"/>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="50"/>
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="SearchValue" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Vyhledávání" TextWrapping="Wrap" Margin="5,5,5,5" Width="400" VerticalContentAlignment="Center"/>
+            <Button x:Name="Search" Grid.Column="1" Margin="5" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
+                <materialDesign:PackIcon
+                Kind="Magnify"
+                Height="24"
+                Width="24" />
+            </Button>
+
+            <Button x:Name="UpdateAnimals" Grid.Column="4" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
+                <materialDesign:PackIcon
+                Kind="Reload"
+                Height="24"
+                Width="24" />
+            </Button>
+            
+             <Button x:Name="AddAnimal" Style="{StaticResource MaterialDesignRaisedAccentButton}" Grid.Column="2" Grid.Row="1" Margin="5">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <materialDesign:PackIcon Kind="PlusCircle"  Width="25" Height="25"/>
+                    <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">Přidat nové zvíře</TextBlock>
+                </StackPanel>
+            </Button>
+
+            <Button x:Name="OpenEvidencyCard" IsEnabled="{Binding IsSelected}"  Style="{StaticResource MaterialDesignRaisedDarkButton}" Grid.Row="1" Margin="5">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <materialDesign:PackIcon Kind="FolderOpen" Width="25" Height="25"/>
+                    <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">Otevřít evidenční kartu</TextBlock>
+                </StackPanel>
+            </Button>
+                
+
+        </Grid>
+        <DataGrid Grid.Row="1" Margin="5" ColumnWidth="*" AutoGenerateColumns="False" CellStyle="{StaticResource CellCentering}" VerticalContentAlignment="Center" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=Animals, Mode=OneWay}" SelectedItem="{Binding Path=SelectedAnimal, Mode=OneWayToSource}">
+            <DataGrid.Columns>
+                <DataGridTemplateColumn Width="120" Header="Obrázek">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Grid Width="80" Height="80">
+                                <Image Source="{Binding ImagePath}" VerticalAlignment="Center" HorizontalAlignment="Center" Stretch="UniformToFill" />
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="ID" Binding="{Binding ID}"/>
+                <DataGridTextColumn Header="Jméno" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="Číslo čipu" Binding="{Binding ChipNumber}"/>
+                <DataGridTextColumn Header="Pohlaví" Binding="{Binding Sex}"/>
+                <DataGridTextColumn Header="Druh" Binding="{Binding Species}"/>
+                <DataGridTextColumn Header="Plemeno" Binding="{Binding Breed}"/>
+                <DataGridTextColumn Header="Typ srsti" Binding="{Binding CoatType}"/>
+                <DataGridTextColumn Header="Barva srsti" Binding="{Binding FurColor}"/>
+
+                <DataGridTemplateColumn Header="V útulku">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <materialDesign:PackIcon x:Name="icon" Kind="CheckboxMarked" />
+                            <DataTemplate.Triggers>
+                                <DataTrigger Binding="{Binding Path=InShelter}" Value="False">
+                                    <Setter Property="Kind" Value="CheckBoxOutlineBlank" TargetName="icon"/>
+                                </DataTrigger>
+                            </DataTemplate.Triggers>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+            </DataGrid.Columns>
+        </DataGrid>
         <ProgressBar  
               Visibility="{Binding IsWorking, Converter={StaticResource VisibleIfTrueConverter}}"
               Grid.RowSpan="2"
